# somnia-dev-assist

./: .gitignore  LICENSE  README.md  codebook.toml  main.py  pyproject.toml  requirements.txt
api/: app.py  exceptions.py  streaming.py
api/routes/: chat.py
backend/: package.json  pnpm-lock.yaml  tsconfig.json
backend/src/: app.ts  server.ts
discord-bot/: package.json
docs/: somnia_data_streams.md  somnia_ice_db.md
rag/: ARCHITECTURE.md  BEHAVIORAL_CONTRACT.md  agent.py  cli.py  config.py  ingest.py  llm_assistant.py  prompts.py  retriever.py  settings.py  utils.py
telegram-bot/: package.json
