[project]
name = "somnia-dev-assist"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.7",
    "uvicorn[standard]>=0.40.0",
]
